# tearsheet

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  PHASE1_COMPLETE.md  PRODUCT_SPEC.md  Procfile  README.md  SESSION_2024-12-24.md  TESTING_PHASE1.md  app.py  claude.md  fundinvestigator_app.py  main.py  my_thoughts.md  pyproject.toml  railway.toml  requirements.txt
.streamlit/: config.toml
app_pages/: fund_deepdive.py
data/: .gitkeep  mf_data.db.wal
docs/: backlog.md  code_flow.md
docs/sessions/: README.md  category_deepdive_adjustments.md
fundinvestigator-brand-package/: fundinvestigator-brand-final.jsx
pages/: category_deepdive.py  fund_deepdive.py  fund_universe.py
src/: computation_cache.py  data_loader.py  metrics.py  mktdata_loader.py  shared_components.py  visualizations.py
tests/: README.md  conftest.py  explore_mktdata_schema.py  test_app_imports.py  test_metrics_ratio.py  test_metrics_return.py  test_metrics_risk.py  test_metrics_updates.py  test_mktdata_integration.py  test_mktdata_loader.py
utils/: helpers.py
wip/: README.md  app.py
wip/pages/: category_deepdive.py  fund_universe.py  landing.py
